<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="search_title">Search Result</string>
    <string name="favorite">Favorite</string>
    <string name="keywords">Input keyword</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="cv_save">Successfully added to favorite!</string>
    <string name="cv_delete">This movie has been removed from favorite list!</string>
    <string name="share">Share</string>
    <string name="popular">Popular</string>
    <string name="communication">Communication</string>
    <string name="other">Other</string>
    <string name="about_me">About Me</string>
    <string name="language">Change Language</string>
    <string name="insancs">Insan Cahya Setia</string>
    <string name="email">setiainsan8@gmail.com</string>
    <string name="sinosis">Summary of The Story</string>
    <string name="desc">Description</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
    <string name="title">Title</string>
    <string name="rate">Rating</string>
    <string name="err_load_failed">Failed to load data.\\nPlease check your Internet connections!</string>
    <string name="detail">Detail</string>
    <string name="share_text">Thank You for using this application, please share and download in Google Play</string>
    <string name="wrong_upcoming">Cannot retrieve upcoming movie data</string>
    <string name="wrong_popular">Cannot retrieve popular movie data</string>
    <string name="wrong_nowplaying">Cannot retrieve Now Playing movie data</string>
    <string name="wrong_search">Cannot retrieve movie data</string>
    <string name="alerttext">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="message_daily">Good morning! Ready to pick your new movies today?</string>
    <string name="release_movie_message">%s Release today, check and see it!</string>
    <string name="notifications">Notifications</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_summary">Turn on/off daily reminder</string>
    <string name="upcoming_reminder">Upcoming Reminder</string>
    <string name="upcoming_reminder_summary">Turn on/off upcoming reminder</string>
    <string name="setting">Setting</string>
    <string name="empty_widget">Empty favorite list</string>
    <string name="error_upcoming_receiver">Error when receiving data</string>
</resources>
