<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_stars_round"
            android:title="@string/popular" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_play_circle_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />
    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
        </menu>
    </item>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_languange"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/language" />
        </menu>
    </item>
</menu>
